# pilev2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pile/: __init__.py  file_utils.py  templates.py  utils.py
pile/common_crawl/utils/: filter_creative_commons.py
pile/datasets/: __init__.py
pile/datasets/dm_mathematics/: dm_mathematics.py
pile/datasets/enron/: enron.py
pile/datasets/euro_parl/: euro_parl.py
pile/datasets/free_law/: free_law.py
pile/datasets/grade_school_math/: grade_school_math.py
pile/datasets/nih_reporter/: nih_reporter.py
pile/datasets/phil_papers/: phil_papers.py
pile/datasets/project_gutenberg/: project_gutenberg.py
pile/filtering/: filter_the_stack.py  subset_pilev2.py
pile/final_vetting/: read_json.py  streamlit_jsonl.py
pile/processing/: compression_filtering.py  convert_to_lm_dataformat.py  convert_to_parquet.py  deduplication.py  file_utils.py  group_1.py  launch_lm_dataformat.sh  local_dedup.py  process_group1.sh  process_group2.sh  process_group3.sh  processing.py  processing_compression.py  requirements.txt  split_group.py  test_datasets.py  threshold_selection.py
pile/scripts/: run_group_stats.sh
pile/stats/: check_percentage_non_c4.py
pile/tests/: test_datasets.py
pyspark/: pilev2_11092.out  spark_on_slurm.sh
pyspark/processing/: compute_subset_stats.py  compute_subset_stats.sh  compute_token_ratios.py  compute_token_ratios.sh  helpers.py  near_dedup.py  process_data.sh  processing.py  pyspark_tokenize.py  sample_data.sh  spark_session_builder.py  subsample_data.py  tokenize_group.sh
(+28 files in other folders)
